# ROS_Basic_In_5_Days_Real_Robot_Project

./: .gitignore  CMakeLists.txt  README.md  package.xml
action/: OdomRecord.action
catkin_ws/src/find_wall/: CMakeLists.txt  package.xml
catkin_ws/src/find_wall/src/scripts/: avg_std_range.old.py  move_to_wall.old.py  rotate_to_index.old.py  srv_find_wall.py
catkin_ws/src/find_wall_real_robot/: CMakeLists.txt  package.xml
catkin_ws/src/find_wall_real_robot/src/scripts/: srv_find_wall_real_robot.py
catkin_ws/src/follow_outer_wall/: CMakeLists.txt  package.xml
catkin_ws/src/follow_outer_wall/launch/: follow_outer_wall.launch
catkin_ws/src/follow_outer_wall/src/scripts/: cmd_follow_outer_wall.py  cmd_follow_outer_wall_real.py  follow_outer_wall_FAST_TURNS.settings
catkin_ws/src/follow_outer_wall_action_server/: CMakeLists.txt  package.xml
catkin_ws/src/follow_outer_wall_action_server/action/: OdometerDistance.action
catkin_ws/src/follow_outer_wall_action_server/launch/: main.launch
catkin_ws/src/follow_outer_wall_action_server/src/scripts/: srv_follow_outer_wall.py
catkin_ws/src/log_real_robot_lap/: CMakeLists.txt  package.xml
catkin_ws/src/log_real_robot_lap/action/: OdomRecordReal.action
catkin_ws/src/log_real_robot_lap/launch/: Main_Real.launch
catkin_ws/src/log_real_robot_lap/src/scripts/: log_real_robot_lap_ac_client.py  log_real_robot_lap_ac_server.py
catkin_ws/src/log_robot_lap/: README.MD  package.xml
catkin_ws/src/log_robot_lap/launch/: Main.launch  Main_Server.launch
catkin_ws/src/log_robot_lap/src/scripts/: log_robot_lap_ac_client.py  log_robot_lap_ac_server.py
catkin_ws/src/record_odom/: CMakeLists.txt  package.xml
catkin_ws/src/record_odom/src/scripts/: act_record_odom.py
launch/: Main.launch  Main_Server.launch
src/: log_robot_ac_client.py  log_robot_lap_server.py
